--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <section id="nav">
     <nav>
       <div class="links">
-          <a href="#plan">Plan your Visit</a>
-          <a href="#learn">Learn about the Park</a>
+          <a href="#plan" class="plan">Plan your Visit</a>
+          <a href="#learn" class="learn">Learn about the Park</a>
           <a href="#get">Get Involved</a>
       </div>
     </nav>
