--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="links">
           <a href="#plan" class="plan">Plan your Visit</a>
           <a href="#learn" class="learn">Learn about the Park</a>
-          <a href="#get">Get Involved</a>
+          <a href="#get" class="get">Get Involved</a>
       </div>
     </nav>
   </section>
@@ -49,9 +49,9 @@
     </div>  
   <nav>
     <div class="footer_links">
-      <a href="#">Plan your Visit</a>
-      <a href="#">Learn about the Park</a>
-      <a href="#">Get Involved</a>
+      <a href="#" class="plan">Plan your Visit</a>
+      <a href="#" class="learn">Learn about the Park</a>
+      <a href="#" class="get">Get Involved</a>
     </div>
   </nav>
 </footer>
