--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         <div class="img_one">
           <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg" alt="img_one">
         </div>
-          <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for current fire restrictions.</p>
+          <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for <b>current fire restrictions.</b></p>
       
         <div class="img_two">
           <img src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="img_two">
         </div>
-          <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the park entrance fee upon arrival (there's no need to pay it in advance).</p>
+          <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the <b>park entrance fee</b> upon arrival (there's no need to pay it in advance).</p>
     </div>
 </body>
 <footer>
